--- a/treasure-hunt/public/index.html
+++ b/treasure-hunt/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
+      Google Fonts
+    -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Saira+Stencil+One&display=swap" rel="stylesheet">
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
